Adding an empty style tag to the template.

--- a/empty-template.html
+++ b/empty-template.html
@@ -2,6 +2,7 @@
 <html ng-app>
     <head>
         <title></title>
+        <style></style>
     </head>
     <body>
         <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.18/angular.min.js"></script>
