more of chapter 2!

--- a/deathray.html
+++ b/deathray.html
@@ -2,12 +2,17 @@
 <html ng-app>
     <head>
         <title>DeathRay</title>
+        <style>
+            .menu-disabled-true {
+                color: gray;
+            }
+        </style>
     </head>
     <body>
         <div ng-controller='DeathrayMenuController'>
             <button ng-click='toggleMenu()'>Toggle Menu</button>
-            <ul ng-show='menuState.show'>
-                <li ng-click='stun()'>Stun</li>
+            <ul>
+                <li class='menu-disabled-{{isDisabled}}' ng-click='stun()'>Stun</li>
                 <li ng-click='disintegrate()'>Disintegrate</li>
                 <li ng-click='erase()'>Erase from history</li>
             </ul>
@@ -15,14 +20,16 @@
         <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.18/angular.min.js"></script>
         <script>
             function DeathrayMenuController($scope) {
-                $scope.menuState = {show: false};
+                $scope.isDisabled = false;
 
                 $scope.toggleMenu = function() {
                     $scope.menuState.show = !$scope.menuState.show;
                 };
 
                 $scope.stun = function() {
+                    // stun the target, then disable menu to allow regeneration
                     alert('Stunned!');
+                    $scope.isDisabled = 'true';
                 };
 
                 $scope.disintegrate = function() {
