--- a/discounted-cart.html
+++ b/discounted-cart.html
@@ -12,9 +12,9 @@
                 <span>{{item.price | currency}}</span>
                 <span>{{item.price * item.quantity | currency}}</span>
             </div>
-            <div>Total: {{totalCart() | currency}}</div>
+            <div>Total: {{bill.total | currency}}</div>
             <div>Discount: {{bill.discount | currency}}</div>
-            <div>Subtotal: {{subtotal() | currency}}</div>
+            <div>Subtotal: {{bill.subtotal | currency}}</div>
         </div>
         <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.18/angular.min.js"></script>
         <script>
@@ -27,23 +27,17 @@
                     {title: 'Pebbles', quantity: 5, price: 6.95}
                     ];
 
-                    $scope.totalCart = function() {
-                        var total = 0;
-                        for (var i=0, len = $scope.items.length; i < len; i++) {
-                            total = total + $scope.items[i].price * $scope.items[i].quantity;
-                        }
-                        return total;
+                var calculateTotals = function() {
+                    var total = 0;
+                    for (var i=0, len = $scope.items.length; i < len; i++) {
+                        total = total + $scope.items[i].price * $scope.items[i].quantity;
                     }
+                    $scope.bill.total = total;
+                    $scope.bill.discount = total > 100 ? 10 : 0;
+                    $scope.bill.subtotal = total - $scope.bill.discount
+                }
 
-                    $scope.subtotal = function() {
-                        return $scope.totalCart() - $scope.bill.discount;
-                    }
-
-                    function calculateDiscount(newValue, oldValue, scope) {
-                        $scope.bill.discount = newValue > 100 ? 10 : 0;
-                    }
-
-                    $scope.$watch($scope.totalCart, calculateDiscount)
+                $scope.$watch('items', calculateTotals, true)
             }
         </script>
     </body>
