--- a/discounted-cart.html
+++ b/discounted-cart.html
@@ -27,7 +27,7 @@
                     {title: 'Pebbles', quantity: 5, price: 6.95}
                     ];
 
-                var calculateTotals = function() {
+                $scope.$watch(function() {
                     var total = 0;
                     for (var i=0, len = $scope.items.length; i < len; i++) {
                         total = total + $scope.items[i].price * $scope.items[i].quantity;
@@ -35,9 +35,7 @@
                     $scope.bill.total = total;
                     $scope.bill.discount = total > 100 ? 10 : 0;
                     $scope.bill.subtotal = total - $scope.bill.discount
-                }
-
-                $scope.$watch('items', calculateTotals, true)
+                })
             }
         </script>
     </body>
